Here's the commented version of the code:

```c++
// Copyright 2018 gRPC authors.

// Header guard to prevent multiple inclusions of this header file
#ifndef GRPC_SRC_CPP_EXT_FILTERS_CENSUS_SERVER_CALL_TRACER_H
#define GRPC_SRC_CPP_EXT_FILTERS_CENSUS_SERVER_CALL_TRACER_H

// Include platform support definitions
#include <grpc/support/port_platform.h>

// Include necessary internal headers
#include "src/core/lib/resource_quota/arena.h"  // For memory allocation management
#include "src/core/telemetry/call_tracer.h"     // Base class for call tracers

namespace grpc {
namespace internal {

// Factory class for creating OpenCensus server call tracer instances.
// This implements the ServerCallTracerFactory interface to provide
// OpenCensus-specific server call tracing functionality.
class OpenCensusServerCallTracerFactory
    : public grpc_core::ServerCallTracerFactory {
 public:
  // Creates a new ServerCallTracer instance for OpenCensus tracing.
  // Parameters:
  //   arena - Memory arena for allocation (managed by gRPC)
  //   channel_args - Channel arguments that might affect tracer creation
  // Returns:
  //   Pointer to newly created ServerCallTracer instance
  grpc_core::ServerCallTracer* CreateNewServerCallTracer(
      grpc_core::Arena* arena, const grpc_core::ChannelArgs& channel_args) override;
};

}  // namespace internal
}  // namespace grpc

#endif  // GRPC_SRC_CPP_EXT_FILTERS_CENSUS_SERVER_CALL_TRACER_H
```

The comments explain:
1. The purpose of the header guard
2. The included headers and their roles
3. The overall purpose of the OpenCensusServerCallTracerFactory class
4. The CreateNewServerCallTracer method's parameters and return value
5. Namespace closing comments for better readability

The comments are kept concise while providing enough information for future maintainers to understand the code's purpose and functionality.